<resources>
    <string name="app_name">FileClear</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_master">Clean up</string>
    <string name="space_controller">Storage Manager</string>
    <string name="app_controller">App Manager</string>
    <string name="storage_available">Available:</string>
    <string name="storage_total">Total:</string>
    <string name="storage_available_size">2G</string>
    <string name="storage_enough_text">Storage space is enough,please keep it up!</string>
    <string name="storage_insufficient_text">Storage space is insufficient,please clean up!</string>
    <string name="cleanup_last_size">The total amount of the last cleanup:</string>
    <string name="cleanup_total_size">The total amount of cleanup:</string>
    <string name="cleanup_last_time">The last cleanup:</string>
    <string name="cleanup_last_time_value"> </string>
    <string name="cleanup_last_size_value">0M</string>
    <string name="cleanup_total_size_value">0M</string>
    <string name="one_key_cleanup">optimize</string>
    <string name="scanning">Scanning:</string>
    <string name="scan_path">scan path</string>
    <string name="clean_size">It\'s freeing up %1$s space.</string>
    <string name="running_apps">Running Apps: %1$d</string>
    <string name="cache_trash">Cache trash: %1$s</string>
    <string name="useless_file">Useless file: %1$s</string>
    <string name="done">done</string>
    <string name="depth_clean">depth clean</string>
    <string name="kill_process">Closing the running apps in progress&#8230;</string>
    <string name="clear_cache_useless_files">Clearing cache and useless files&#8230;</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">minute ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="day_ago">day ago</string>
    <string name="video">Videos</string>
    <string name="image">Images</string>
    <string name="apk">APK</string>
    <string name="music">Music</string>
    <string name="others">Others</string>
    <string name="deep_clear">%1$d large files, %2$s of taking up space.</string>
    <string name="press_ok_delete">Press [OK] button to delete it!</string>
    <string name="songs">songs</string>
    <string name="big_file">bigFile</string>
    <string name="delete_fail">delete fail!</string>
    <string name="uninstall_app">You can uninstall some apps to get more space available!</string>
    <string name="delete_app_OK_button">You can press [OK] button to wake up the menu,when the app is selected.You can uninstall the apps in the menu.</string>
    <string name="scanning_large_files">Scanning large files…</string>
</resources>
