<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rg_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/rb_one_key_clear"
                style="@style/text_main"
                android:text="@string/clear_master" />
            <ImageView
                android:id="@+id/line_clear_master"
                style="@style/line_style"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/rb_space_controller"
            style="@style/text_main"
            android:text="@string/space_controller" />
            <ImageView
                android:id="@+id/line_storage_manager"
                style="@style/line_style"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/rb_app_controller"
            style="@style/text_main"
            android:text="@string/app_controller" />
            <ImageView
                android:id="@+id/line_app_manager"
                style="@style/line_style"
                />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
